--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    
+    <div id="root">
+      
+    </div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="src/components/js/gsap.min.js"></script>
+    <script src="src/components/js/ScrollTrigger.min.js"></script>
+    <script src="src/components/js/lenis.min.js"></script>
+    <script src="src/components/js/imagesloaded.pkgd.min.js"></script>
+    <script type="module" src="src/components/js/index.js"></script>
   </body>
 </html>
